working on auth

--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -17,8 +17,7 @@
 
 {{ define "content" }}
 <div class="content"  >
-  {{ template "game-play" . }}
-  <!-- {{ template "create-question" . }} -->
+  {{ template "create-account"}}
 </div>
 {{ end }}
 
