--- a/ui/static/css/index.css
+++ b/ui/static/css/index.css
@@ -154,3 +154,64 @@ margin: 0 auto;
 #create-question-form textarea {
   vertical-align: top;
 }
+
+/* Create Account */
+
+/* Sign in form */
+
+#create-account-title {
+  font-size: 3em;
+  color: white;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+
+
+#create-account-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+  width: 100%;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* #sign-in-form { */
+/*   width: 100%; */
+/* } */
+
+
+
+#create-account-container label {
+  color: white;
+  display: block;
+  margin-bottom: 5px;
+}
+
+#create-account-container input {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 20px; /* Increase this value to increase the vertical space */
+}
+
+#create-account-container input[type="submit"] {
+  font-size: 1.5em;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  background-color: #4CAF50;
+  color: white;
+  cursor: pointer;
+  width: 100%; /* Increase this value to make the input boxes wider */
+}
+
+#create-account-container input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
