--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -1,42 +1,7 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <title></title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/static/css/index.css">
-  <script src="https://unpkg.com/htmx.org@1.9.12"></script>
-</head>
-
-<body>
-  <h1 class="jersey-15-regular main-header">Marren Games</h1>
-  <div id="background"></div>
-  <div class="content">
-    <div id="yellow-corner-top-left"></div>
-    <div id="yellow-corner-top-right"></div>
-
-
-    <div class="welcome-screen jersey-15-regular" id="welcome-screen">
-      <h1>Welcome!</h1>
-      <div id="home-container">
-        <button class="jersey-15-regular" hx-get="/sign-in" hx-push-url="true" hx-swap="outerHTML"
-          hx-target="#welcome-screen">Sign
-          In</button>
-        <button class="jersey-15-regular" hx-get="/create-account" hx-push-url="true" hx-swap="outerHTML"
-          hx-target="#welcome-screen">Create Account</button>
-      </div>
-    </div>
-
-    <!-- {{ if eq .Content "sign-in" }} -->
-    <!-- {{ template "sign-in" }} -->
-    <!-- {{ else if eq .Content "create-account"}} -->
-    <!-- {{ template "create-account" }} -->
-    <!-- {{ else if "create-question"}} -->
-    <!-- {{ template "create-question" }} -->
-    <!-- {{ end }} -->
-  </div>
-</body>
-
-</html>
+{{ define "index" }}
+<button class="jersey-15-regular" href="/sign-in" hx-get="/sign-in" hx-push-url="true" hx-swap="outerHTML"
+  hx-target="#welcome-screen">Sign
+  In</button>
+<button class="jersey-15-regular" href="/create-account" hx-get="/create-account" hx-push-url="true" hx-swap="outerHTML"
+  hx-target="#welcome-screen">Create Account</button>
+{{ end }}
