--- a/ui/templates/create-account.html
+++ b/ui/templates/create-account.html
@@ -1,10 +1,11 @@
 {{ define "create-account" }}
 <div id="create-account-container">
   <span id="create-account-title" class="jersey-15-regular">Create Account</span>
-  <form id="create-account-form" hx-post="/create-account-submit" hx-swap="outerHTML" class="jersey-15-regular">
+  <form id="create-account-form" hx-post="/create-account-submit" hx-target="#create-account-container"
+    hx-swap="outerHTML" class="jersey-15-regular">
     <div>
       <label for="username">Username</label>
-      <input type="text" id="username" name="username" required>
+      <input type="text" id="username" name="username" value={{ .Username }} required>
     </div>
     <div>
       <label for="password">Password</label>
@@ -12,11 +13,12 @@
     </div>
     <div>
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="email" value={{ .Email }} required>
     </div>
     <div>
       <input type="submit" value="create" class="jersey-15-regular">
     </div>
   </form>
+  <div id="create-account-error">{{ .Error }}</div>
 </div>
 {{ end }}
