auth working properly

--- a/ui/templates/profile.html
+++ b/ui/templates/profile.html
@@ -1,6 +1,5 @@
 {{ define "profile" }}
 <div class="profile-container">
-  <h1 class="jersey-15-">{{ .Username }}</h1>
-  {{ if eq .GameToday "unplayed"}} <h2>Play Today's Game!</h2>
-  {{ end }}
+  <h1 style="align: center;" class="jersey-15-">{{ .Username }}</h1>
 </div>
+{{ end }}
