--- a/ui/templates/sign-in.html
+++ b/ui/templates/sign-in.html
@@ -4,7 +4,7 @@
   <form id="sign-in-form" hx-post="/login" hx-target="#sign-in-container" hx-swap="outerHTML" hx-push-url="true"
     class="jersey-15-regular">
     <div>
-      <label for="username">Username:</label>
+      <label for="username">Username:{{ .Username}}</label>
       <input type="text" id="username" name="username" required>
     </div>
     <div>
