--- a/ui/templates/profile.html
+++ b/ui/templates/profile.html
@@ -1,5 +1,5 @@
 {{ define "profile" }}
 <div class="profile-container">
-  <h1 style="align: center;" class="jersey-15-">{{ .Username }}</h1>
+  <h1 class="jersey-15-regular">{{ .Username }}</h1>
 </div>
 {{ end }}
