--- a/ui/templates/user-profile.html
+++ b/ui/templates/user-profile.html
@@ -1,6 +1,7 @@
 {{ define "user-profile" }}
 <div>
-  <h1>Welcome back, {{ .Username }}
+  <h1>
+    Welcome back, {{ .Username }}
   </h1>
 </div>
 {{ end }}
