--- a/ui/templates/profile.html
+++ b/ui/templates/profile.html
@@ -2,7 +2,7 @@
 <div class="profile-container">
   {{range .Data}}
   <li>
-    Answer: {{.WrittenAnswer.String}}<br>
+    Answer: {{.AnswerText.String}}<br>
     Answerer ID: {{.AnswererID.Int64}}<br>
     Answerer Username: {{.AnswererUsername.String}}<br>
     Question ID: {{.QuestionID.Int64}}<br>
