--- a/ui/templates/profile.html
+++ b/ui/templates/profile.html
@@ -2,10 +2,12 @@
 <div class="profile-container">
   {{range .Data}}
   <li>
-    Answer: {{.AnswerText.String}}<br>
-    Answerer ID: {{.AnswererID.Int64}}<br>
-    Answerer Username: {{.AnswererUsername.String}}<br>
-    Question ID: {{.QuestionID.Int64}}<br>
+    AnswerId: {{.AnswerId}}<br>
+    Answerer Id: {{.AnswerText}}<br>
+    Date Created: {{.DateCreated}}<br>
+    Question Id: {{.QuestionId}}<br>
+    AnswererId: {{.AnswererId}}<br>
+
   </li>
   {{else}}
   <li>No data available.</li>
