--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -17,6 +17,10 @@
     all: unset;
   }
 
+  * {
+    cursor: url('/static/public/cursor-1.png'), auto;
+  }
+
   body {
     margin-top: 25px;
     background-color: moccasin;
